# processtui

./: pyproject.toml
process_tui/: logviewer.py  test_commands.json  tests.py  tui.py
processtui/: logviewer.py  test_commands.json  tui.py
