[tool.poetry]
name = "processtui"
version = "0.1.0"
description = ""
authors = ["Tiago Lime, The Lime <tiago@myurbanjungle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.4.0"}
asyncio = "^3.4.3"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
